# stemmadist

./: .gitignore  README.md  pyproject.toml  test.ipynb
.github/workflows/: test.yaml
paper/: benchmarking.ipynb  discussion.ipynb  get_texts.ipynb
paper/results/: paup_file
paper/results/heinrichi/nex/: heinrichi.nex  heinrichi.phylip
paper/results/heinrichi/paup_trees/: bs_nj.tre  bs_parsi.tre  nj.tre  parsi.tre
paper/results/heinrichi/texts/: A.txt  Ab.txt  Ac.txt  Ad.txt  Ae.txt  B.txt  Ba.txt  Bb.txt  Bd.txt  Be.txt  C.txt  Ca.txt  Cb.txt  Cc.txt  Cd.txt  Ce.txt  Cf.txt  Da.txt  E.txt  F.txt  G.txt  H.txt  I.txt  J.txt  K.txt  L.txt  M.txt  N.txt  O.txt  P.txt  R.txt  S.txt  T.txt  V.txt  W.txt
paper/results/notre_besoin/: get_text.ipynb  notrebesoin_gt_v1.newick  notrebesoin_gt_v2.newick
paper/results/notre_besoin/notrebesoin_nex/: notrebesoin.nex  notrebesoin_gt.nex
paper/results/notre_besoin/notrebesoin_texts/: n1.txt  n10.txt  n11.txt  n12.txt  n13.txt  n2.txt  n3.txt  n4.txt  n5.txt  n6.txt  n7.txt  n8.txt  n9.txt
paper/results/notre_besoin/paup_trees/: bs_ls.tre  bs_parsi.tre  ls.tre  nj.tre  parsi.tre
paper/results/parzival/gt/: parzival.newick
paper/results/parzival/nex/: parzival.nex  parzival.phylip
paper/results/parzival/paup_trees/: bs_ls.tre  bs_parsi.tre  ls.tre  nj.tre  parsi.tre
src/stemmadist/: main.py
src/stemmadist/dists/: node_distance.py
src/stemmadist/utils/: utils.py  utils_paper.py
tests/dists/: test_graph.py  test_information.py  test_rf.py  test_sign_similarity.py
tests/utils/: test_utils.py
(+26 files in other folders)
