[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stemmadist"
version = "0.0.0"
dependencies = [
    "newick==1.9.*",
    "click==8.0.*",
    "scipy==1.14.*",
    "numpy==2.1.*",
    "networkx==3.4.*"
]
requires-python = ">=3.9"
authors = [
  {name = "Sophie Robert-Hayek", email = "sophie.robert@univ-lorraine.fr"},
]
maintainers = [
  {name = "Sophie Robert-Hayek", email = "sophie.robert@univ-lorraine.fr"},
]
description = "Library to compute the distance between trees"
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = ["tree", "distance", "phylogeny", "stemmatology"]
classifiers = [
  "Programming Language :: Python"
]

[project.scripts]
compute = "stemmadist:main.compute"

[project.optional-dependencies]
ci = [
"pytest==8.3.*",
]
